@@ -1,6 +1,5 @@
 package com.example.autostore.service.user.implement;
 
-import com.example.autostore.Enum.BookingStatus;
 import com.example.autostore.Enum.CarStatus;
 import com.example.autostore.dto.admin.CarLocationDTO;
 import com.example.autostore.dto.admin.FleetCarDTO;
@@ -10,7 +9,6 @@ import com.example.autostore.repository.ICarRepository;
 import com.example.autostore.service.user.interfaces.IFleetService;
 import org.springframework.stereotype.Service;
 
-import java.time.LocalDate;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -21,28 +19,15 @@ public class FleetService implements IFleetService {
     public FleetService(ICarRepository carRepository) {
         this.carRepository = carRepository;
     }
-@Override
+
+    @Override
     public FleetOverviewDTO getOverview() {
         List<Car> cars = carRepository.findAll();
 
         long totalCars = cars.size();
+        long rentedCars = cars.stream().filter(c -> c.getStatus() == CarStatus.RENTED).count();
+        long maintenanceCars = cars.stream().filter(c -> c.getStatus() == CarStatus.MAINTENANCE).count();
 
-        // Đếm xe đang cho thuê dựa trên booking
-        long rentedCars = cars.stream()
-                .filter(car -> car.getBookings() != null &&
-                        car.getBookings().stream().anyMatch(booking ->
-                                booking.getStatus() == BookingStatus.CONFIRMED &&
-                                        !booking.getPickupDate().isAfter(LocalDate.now()) &&   // pickupDate <= hôm nay
-                                        !booking.getReturnDate().isBefore(LocalDate.now())     // returnDate >= hôm nay
-                        )
-                ).count();
-
-        // Đếm xe đang bảo dưỡng
-        long maintenanceCars = cars.stream()
-                .filter(c -> c.getStatus() == CarStatus.MAINTENANCE)
-                .count();
-
-        // Tính tỉ lệ sử dụng
         double utilization = totalCars > 0 ? (double) rentedCars / totalCars * 100 : 0;
 
         return new FleetOverviewDTO(totalCars, rentedCars, maintenanceCars, utilization);
@@ -60,27 +45,37 @@ public class FleetService implements IFleetService {
                 ))
                 .collect(Collectors.toList());
     }
+
     @Override
     public List<CarLocationDTO> getCarLocations() {
         return carRepository.findAll().stream()
-                .map(car -> new CarLocationDTO(
-                        car.getCarId(),
-                        car.getCarName(),
-                        car.getStatus().name(),
-                        car.getLatitude(),
-                        car.getLongitude()
+                .map(c -> new CarLocationDTO(
+                        c.getCarId(),
+                        c.getCarName(),
+                        c.getStatus().name(),
+                        c.getLatitude(),
+                        c.getLongitude(),
+                        c.getImageUrl()   // thêm ảnh xe
                 ))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     public CarLocationDTO updateCarLocation(Integer carId, double latitude, double longitude) {
         Car car = carRepository.findById(carId)
                 .orElseThrow(() -> new RuntimeException("Car not found: " + carId));
+
         car.setLatitude(latitude);
         car.setLongitude(longitude);
         carRepository.save(car);
 
-        return new CarLocationDTO(car.getCarId(), car.getCarName(), latitude, longitude, car.getStatus().name());
+        return new CarLocationDTO(
+                car.getCarId(),
+                car.getCarName(),
+                car.getStatus().name(),
+                car.getLatitude(),
+                car.getLongitude(),
+                car.getImageUrl()
+        );
     }
 }
